Annotate page title to indicate reader mode active

--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -3529,6 +3529,8 @@ ReaderMode = {
         }
     `,
 
+	readerModeTitleNote: " (reader mode)",
+
     /*  Inject a style block with the given content and element ID.
      */
     //  Called by: this file (immediately on load)
@@ -3579,6 +3581,9 @@ ReaderMode = {
 
         //  Add body classes.
         document.body.classList.add("reader-mode-active", "masked-links-hidden");
+
+		//	Update document title.
+		document.title += ReaderMode.readerModeTitleNote;
     },
 };
 
