--- a/includes/inlined-graphical-linkicon-styles.html
+++ b/includes/inlined-graphical-linkicon-styles.html
@@ -63,6 +63,7 @@ a[data-link-icon='metaculus'] { --link-icon-url: url('/static/img/icons/metaculu
 a[data-link-icon='wandb'] { --link-icon-url: url('/static/img/icons/wandb.svg'); }
 a[data-link-icon='raven'] { --link-icon-url: url('/static/img/icons/raven.svg'); }
 a[data-link-icon='hoover-institution'] { --link-icon-url: url('/static/img/icons/hoover-institution.svg'); }
+a[data-link-icon='stat-news'] { --link-icon-url: url('/static/img/icons/stat-news.svg'); }
 a[data-link-icon='arrow-up-left'] { --link-icon-url: url('/static/img/icons/arrow-up-left.svg'); }
 a[data-link-icon='arrow-down-right'] { --link-icon-url: url('/static/img/icons/arrow-down-right.svg'); }
 a[data-link-icon='arrow-right'] { --link-icon-url: url('/static/img/icons/arrow-right.svg'); }
