default.css: epigraph: handle epitaph cases (also centered & italicized but no curly quotes, so just centered)

--- a/css/default.css
+++ b/css/default.css
@@ -936,6 +936,9 @@ blockquote table {
     font-size: 0.7em;
 }
 
+/* EPITAPH (eg /LARPing) */
+.text-center { text-align: center; }
+
 /*************/
 /* EPIGRAPHS */
 /*************/
