default.css: citations: looks like the quad-em change makes the et-al spacing off. needs to add negative margin to the plural-author (but not single/double author!)

--- a/css/default.css
+++ b/css/default.css
@@ -5195,6 +5195,7 @@ section.highlight-fading::before {
 .cite-author-plural::after {
     content: "...";
     margin-left: 0.05em;
+    margin-right: -0.20em;
 }
 .cite-date {
     vertical-align: -0.35ex;
