--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -3437,7 +3437,7 @@ ReaderMode = {
                 "#navigation",
                 "#sidenote-column-left",
                 "#sidenote-column-right",
-                ".inflationAdjusted .supsub",
+                ".inflationAdjusted .subsup",
                 ".footnote-ref"
                 ]
               ).join(",\n"))} {
