--- a/css/default.css
+++ b/css/default.css
@@ -5209,3 +5209,6 @@ section.highlight-fading::before {
     display: none;
 }
 a .cite { margin-left: 2px;}
+a .cite-author-plural::after {
+    margin-right: 0em;
+}
