Fix minor bugs in image alt text handling

--- a/css/default.css
+++ b/css/default.css
@@ -863,6 +863,7 @@ img::before {
     padding: 0.5em 0.75em;
     background-color: var(--GW-body-background-color);
     text-align: left;
+    box-sizing: border-box;
     height: 100%;
 }
 
