Transclusion, part III

--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -3160,9 +3160,7 @@ GW.notificationCenter = {
 		Values are functions that take the event info as an argument, and return
 		modified event info.
 	*/
-	prefireProcessors: {
-
-	},
+	prefireProcessors: { },
 
     /*	Fire an event with the given name and event info dictionary.
 
