--- a/css/default.css
+++ b/css/default.css
@@ -5231,8 +5231,23 @@ a .cite-author-plural::after {
 a.include {
 	margin: 0;
 }
-a.include .indicator-hook,
-a.include::after {
-	display: none;
+.markdownBody a.include {
+	background: none;
 }
 
+/*  Loading spinner.
+ */
+a.include::after {
+    content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M222.7 32.15C227.7 49.08 218.1 66.9 201.1 71.94C121.8 95.55 64 169.1 64 255.1C64 362 149.1 447.1 256 447.1C362 447.1 448 362 448 255.1C448 169.1 390.2 95.55 310.9 71.94C293.9 66.9 284.3 49.08 289.3 32.15C294.4 15.21 312.2 5.562 329.1 10.6C434.9 42.07 512 139.1 512 255.1C512 397.4 397.4 511.1 256 511.1C114.6 511.1 0 397.4 0 255.1C0 139.1 77.15 42.07 182.9 10.6C199.8 5.562 217.6 15.21 222.7 32.15V32.15z"/></svg>');
+	display: inline-block;
+	width: 1.25em;
+    height: 1.25em;
+    margin: 0 0 0;
+    animation: fa-spin 2s infinite linear;
+    position: relative;
+    top: 0.25em;
+    opacity: 0.5;
+}
+a.include.include-no-spinner::after {
+	display: none;
+}
