--- a/templates/inlined-foot-template.html
+++ b/templates/inlined-foot-template.html
@@ -17,6 +17,7 @@
 	<script src="/static/js/Hyphenopoly_Loader.js" defer></script>
     <script src="/static/js/typography.js" defer></script>
     <script src="/static/js/rewrite.js" defer></script>
+    <script src="/static/js/transclude.js" defer></script>
     <script src="/static/js/collapse.js" defer></script>
 
     <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
