--- a/css/default.css
+++ b/css/default.css
@@ -753,6 +753,7 @@ figure + figure {
     margin: auto;
     width: -moz-fit-content;
     width: fit-content;
+    max-width: 100%;
 }
 
 figure img {
