--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -3212,6 +3212,13 @@ GW.notificationCenter = {
 		if (!eventName)
 			return;
 
+		/*	Store event name in info dictionary, so that event handlers can
+			access it. (This permits, e.g., the same handler to handle multiple
+			events, and conditionally select behavior based on which event is
+			calling the handler.)
+		 */
+		eventInfo.eventName = eventName;
+
         /*  The ‘16’ here is the width of the date field plus spacing.
             The “Source:” text is manually padded to be as wide
             as “[notification]”.
