--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -3212,6 +3212,17 @@ GW.notificationCenter = {
 	 */
 	waitingHandlers: { },
 
+	/*	Add all waiting handlers for the event, if any.
+	 */
+	addWaitingHandlersForEvent: (eventName) => {
+		if (GW.notificationCenter.waitingHandlers[eventName]) {
+			GW.notificationCenter.waitingHandlers[eventName].forEach(handler => {
+				GW.notificationCenter.addHandlerForEvent(eventName, handler.f, handler.options);
+			});
+			GW.notificationCenter.waitingHandlers[eventName] = [ ];
+		}
+	},
+
     /*	Fire an event with the given name and event info dictionary.
 
     	In addition to printing a console log message (if the log level is set
@@ -3264,58 +3275,49 @@ GW.notificationCenter = {
         		  : ""
 				 )}`, "notification");
 
-		/*	If no handlers have been registered for this event, we do nothing.
-		 */
-        if (   GW.notificationCenter.eventHandlers[eventName] == null
-        	|| GW.notificationCenter.eventHandlers[eventName] == [ ])
-            return;
-
 		/*	If event-specific pre-fire processing is needed, do it.
 		 */
 		if (GW.notificationCenter.prefireProcessors[eventName])
 			eventInfo = GW.notificationCenter.prefireProcessors[eventName](eventInfo);
 
-		/*	Call all registered handlers, in order.
+		/*	Call all registered handlers (if any), in order.
 		 */
-        for (let i = 0; i < GW.notificationCenter.eventHandlers[eventName].length; i++) {
-            let handler = GW.notificationCenter.eventHandlers[eventName][i];
-            /*	If a condition function is provided, call it to determine
-            	whether the handler function should be called.
-             */
-            if (   handler.options.condition
-            	&& handler.options.condition(eventInfo) == false)
-                continue;
+		if (GW.notificationCenter.eventHandlers[eventName]) {
+			for (let i = 0; i < GW.notificationCenter.eventHandlers[eventName].length; i++) {
+				let handler = GW.notificationCenter.eventHandlers[eventName][i];
+				/*	If a condition function is provided, call it to determine
+					whether the handler function should be called.
+				 */
+				if (   handler.options.condition
+					&& handler.options.condition(eventInfo) == false)
+					continue;
 
-            /*	If the condition function evaluated true, or if no condition
-            	function was provided, we call the handler.
-             */
-            handler.f(eventInfo);
+				/*	If the condition function evaluated true, or if no condition
+					function was provided, we call the handler.
+				 */
+				handler.f(eventInfo);
 
-        	/*	If the handler options specified a true value for the ‘once’
-        		key, we unregister this handler after having called it once.
+				/*	If the handler options specified a true value for the ‘once’
+					key, we unregister this handler after having called it once.
 
-        		(Note that in the case of an once-only handler that’s called
-        		 conditionally, i.e. one with a specified condition function,
-        		 regardless of how many times the named event fires, the handler
-        		 is never automatically removed until its condition evaluates
-        		 true and the handler actually gets called once.)
-        	 */
-            if (handler.options.once) {
-                GW.notificationCenter.eventHandlers[eventName].splice(i, 1);
-                i--;
-            }
-        }
+					(Note that in the case of an once-only handler that’s called
+					 conditionally, i.e. one with a specified condition function,
+					 regardless of how many times the named event fires, the handler
+					 is never automatically removed until its condition evaluates
+					 true and the handler actually gets called once.)
+				 */
+				if (handler.options.once) {
+					GW.notificationCenter.eventHandlers[eventName].splice(i, 1);
+					i--;
+				}
+			}
+		}
 
 		//	Unregister this event from the list of events currently being fired.
 		GW.notificationCenter.currentEvents.remove(eventName);
 
 		//	Add any handlers that are waiting to be added.
-		if (GW.notificationCenter.waitingHandlers[eventName] > [ ]) {
-			GW.notificationCenter.waitingHandlers[eventName].forEach(handler => {
-				GW.notificationCenter.addHandlerForEvent(eventName, handler.f, handler.options);
-			});
-			GW.notificationCenter.waitingHandlers[eventName] = [ ];
-		}
+		GW.notificationCenter.addWaitingHandlersForEvent(eventName);
     }
 };
 
